Update to Snapshot 6 and fix recipes